[tool.poetry]
name = "sortedcontainers-stubs"
version = "2.4.3"
description = "Type stubs for sortedcontainers"
homepage = "https://github.com/h4l/sortedcontainers-stubs"
repository = "https://github.com/h4l/sortedcontainers-stubs"
authors = [
    "Hal Blackburn <hwtb2@cam.ac.uk>",
    "Martin Larralde <martin.larralde@embl.de>",
    "Bryan Forbes <bryan@reigndropsfall.net>",
    "David Robertson <david.m.robertson1@gmail.com>",
    "Grant Jenks <contact@grantjenks.com>",
]
maintainers = ["Hal Blackburn <hwtb2@cam.ac.uk>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "sortedcontainers-stubs" }]
classifiers = ["Typing :: Stubs Only"]

[tool.poetry.urls]
Issues = "https://github.com/h4l/sortedcontainers-stubs/issues"
Changes = "https://github.com/h4l/sortedcontainers-stubs/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
sortedcontainers = "^2"
typing-extensions = "^4.1.0" # 4.1.0 introduced Never

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
flake8 = "^7.2.0"
flake8-pyi = "^24.9.0"
Flake8-pyproject = "^1.2.3"
pytest = "^8.3.5"
pytest-mypy-plugins = "^3.0.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

# flake8-pyi conflicts with black's pyi style, so we disable its format errors
# https://github.com/PyCQA/flake8-pyi/issues/20
per-file-ignores = """
    *.pyi: E, W
"""

[tool.isort]
profile = "black"
extra_standard_library = ["typing_extensions"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.pyright]
include = ["sortedcontainers-stubs", "test"]
strict = ["sortedcontainers-stubs", "test"]
